--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,9 @@ SPDX-License-Identifier: Apache-2.0
 font-src 'self'; style-src 'self'; script-src 'self' " %}
 
 {% if config.mode == "serve" %}
-{% set csp = csp ~ "; connect-src 'self' ws://127.0.0.1:1024/livereload;" %}
+{% set csp = csp ~ "; connect-src http: https: ws://127.0.0.1:1024/livereload;" %}
 {% else %}
-{% set csp = csp ~ "; connect-src 'self';"%}
+{% set csp = csp ~ "; connect-src http: https:;"%}
 {% endif %}
 
 <head>
