Add a basic client-side script that allows a user to list targets.

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,5 +23,6 @@ SPDX-License-Identifier: Apache-2.0
 -->
 
 {% block content %}
-Well, hello there!
+<button id="list-button">List all targets</button>
+<div id="results"></div>
 {% endblock content %}
