--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@ font-src 'self'; style-src 'self'; script-src 'self' " %}
   <meta name="description" content="{{ config.description }}" />
   <link rel="stylesheet" href="{{ get_url(path='index.css') }}" />
   <title>{% block title %}{% endblock title %}</title>
+  <script type="module" src="{{ get_url(path='reachard.js') }}"></script>
 </head>
 
 <body>
