--- a/sass/index.scss
+++ b/sass/index.scss
@@ -24,7 +24,8 @@
   margin: 1em;
 }
 
-#add-form-container {
+#add-form-container,
+#delete-form-container {
   display: flex;
   flex-direction: column;
   gap: 1em;
