--- a/templates/index.html
+++ b/templates/index.html
@@ -26,13 +26,21 @@ SPDX-License-Identifier: Apache-2.0
 <h3>Targets</h3>
 
 <div id="add-form-container">
-  <form id="add-form" method="post">
+  <form id="add-form">
     <label for="url">URL:</label>
     <input name="url" type="url" required>
     <label for="interval_seconds">Interval (seconds):</label>
     <input name="interval_seconds" type="number" required>
   </form>
   <button type="submit" form="add-form">Add a target</button>
+</div>
+
+<div id="delete-form-container">
+  <form id="delete-form">
+    <label for="id">ID:</label>
+    <input name="id" type="number" required>
+  </form>
+  <button type="submit" form="delete-form">Delete the target</button>
 </div>
 
 <div id="targets-container">
