Add a form to receive a session token.

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -24,6 +24,7 @@
   margin: 1em;
 }
 
+#session-log-in-form-container,
 #targets-add-form-container,
 #targets-delete-form-container {
   display: flex;
