--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,8 @@ limitations under the License.
 SPDX-License-Identifier: Apache-2.0
 -->
 
+{% block title %}Reachard{% endblock title %}
+
 {% block content %}
 <h3>Session</h3>
 
