Add the `autocomplete="username"` attribute on the username `input`.

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ SPDX-License-Identifier: Apache-2.0
 <div id="session-log-in-form-container">
   <form id="session-log-in-form">
     <label for="username">Username:</label>
-    <input id="username" type="text" required>
+    <input id="username" autocomplete="username" type="text" required>
     <label for="password">Password:</label>
     <input id="password" type="password" required>
   </form>
