--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@ font-src 'self'; style-src 'self'; script-src 'self' " %}
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Content-Security-Policy" content="{{ csp | safe }}" />
   <meta name="description" content="{{ config.description }}" />
-  <link rel="stylesheet" href="{{ get_url(path='index.css') }}" />
+  <link rel="stylesheet" href="{{ get_url(path='reachard-index.css') }}" />
   <title>{% block title %}{% endblock title %}</title>
   <link rel="modulepreload" href="{{ get_url(path='reachard-lib.js') }}" />
   {% block scripts %}{% endblock scripts %}
