Add the name field to the "new target" form.

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,8 @@ SPDX-License-Identifier: Apache-2.0
 
 <div id="targets-add-form-container" class="hidden" hidden>
   <form id="targets-add-form">
+    <label for="name">Name:</label>
+    <input id="name" type="text" required>
     <label for="url">URL:</label>
     <input id="url" type="url" required>
     <label for="interval_seconds">Interval (seconds):</label>
