Set the main view based on the URL.

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@ font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.google
 </head>
 
 <body>
-  <input id="ref-targets" class="ref" type="radio" name="tab" checked>
+  <input id="ref-targets" class="ref" type="radio" name="tab">
   <input id="ref-profile" class="ref" type="radio" name="tab">
   <input id="ref-profile-logged-out" class="ref" type="radio" name="login" checked>
   <input id="ref-profile-logged-in" class="ref" type="radio" name="login">
