Update the title based on the view.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@ font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.google
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
-  <title>{% block title %}{% endblock title %}</title>
+  <title>Reachard</title>
   <script type="module" src="{{ get_url(path='reachard.js') }}"></script>
 </head>
 
