Represent targets in a table.

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,24 @@ font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.google
       </div>
       <div id="targets-list-container">
         <button id="targets-list-button">List all targets</button>
-        <div id="targets-list"></div>
+        <table id="targets-table">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">URL</th>
+              <th scope="col">Interval</th>
+            </tr>
+          </thead>
+          <template id="targets-table-row-template">
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </template>
+          <tbody id="targets-table-body">
+          </tbody>
+        </table>
       </div>
     </section>
     <section id="view-targets-add" class="view">
