--- a/sass/reachard.scss
+++ b/sass/reachard.scss
@@ -135,3 +135,13 @@ $refs: targets, targets-add, profile, profile-logged-in, profile-logged-out;
     display: flex;
   }
 }
+
+table {
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 0.75em 1em;
+    text-align: left;
+  }
+}
