Update the target view with relevant information when set.

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,9 @@ font-src 'self' https://fonts.gstatic.com; style-src 'self' https://fonts.google
   </nav>
   <main id="views">
     <section id="view-target" class="view">
-      <header>Target</header>
+      <header></header>
+      <span></span>
+      <p>Interval is set to <span></span>s.</p>
     </section>
     <section id="view-targets" class="view">
       <header>
