Turn the delete target form into a button at `/targets/{id}`.

--- a/sass/reachard.scss
+++ b/sass/reachard.scss
@@ -127,10 +127,6 @@ header {
     gap: 1em;
     width: fit-content;
   }
-
-  > button {
-    width: fit-content;
-  }
 }
 
 $refs:
@@ -150,4 +146,8 @@ table {
     padding: 0.75em 1em;
     text-align: left;
   }
+}
+
+button {
+  width: fit-content;
 }
