--- a/templates/views/target.html
+++ b/templates/views/target.html
@@ -25,5 +25,33 @@ SPDX-License-Identifier: Apache-2.0
   <span></span>
   <p>Interval is set to <span></span>s.</p>
   <button id="target-delete-button">Delete the target</button>
+  <div id="target-incidents">
+    <svg viewBox="0 0 236 20">
+      <rect width="6" height="20" x="0" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="10" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="20" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="30" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="40" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="50" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="60" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="70" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="80" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="90" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="100" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="110" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="120" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="130" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="140" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="150" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="160" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="170" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="180" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="190" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="200" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="210" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="220" y="0" rx="3"></rect>
+      <rect width="6" height="20" x="230" y="0" rx="3"></rect>
+    </svg>
+  </div>
   <div id="target-check-results"></div>
 </section>
