Add a placeholder favicon for now.

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@ script-src 'self' https://cdn.jsdelivr.net/npm/uplot@1/+esm " %}
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Content-Security-Policy" content="{{ csp | safe }}" />
   <meta name="description" content="{{ config.description }}" />
+  <link rel="icon" type="image/png" href="{{ get_url(path='favicon.png') }}">
   <link rel="stylesheet" href="{{ get_url(path='reachard.css') }}" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
