On log in, send a redirect to the server's `/v0/authorize/` endpoint.

--- a/templates/views/profile.html
+++ b/templates/views/profile.html
@@ -25,10 +25,8 @@ SPDX-License-Identifier: Apache-2.0
   <section id="view-profile-logged-out" class="view">
     <div id="session-log-in-form-container">
       <form id="session-log-in-form">
-        <label for="username">Username:</label>
-        <input id="username" type="text" autocomplete="username" required>
-        <label for="password">Password:</label>
-        <input id="password" type="password" required>
+        <label for="endpoint">Endpoint:</label>
+        <input id="endpoint" type="url" required>
       </form>
       <button type="submit" form="session-log-in-form">Log in</button>
     </div>
